# spitwad

./: LICENSE  README.md  spitwad.cabal  stack.yaml
dump/: database.er  dummy_data.sql  news_source_table_data.sql  stock_table_data.sql  trend_source_table_data.sql
src/: Api.hs  App.hs  Config.hs  Javascript.hs  Main.hs  Model.hs
src/Analyse/: Sentiment.hs
src/Model/: Schema.hs  URI.hs
src/Scrape/: Facebook.hs  NewsAPI.hs  Quandl.hs  Twitter.hs
static/: api.js
util/: Javascript.hs  Main.hs
