name:                spitwad
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/GroupDesignPractical/spitwad#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Hu
maintainer:          me@nickhu.co.uk
copyright:           2017 Nick Hu
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable server
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Api
                     , App
                     , Config
                     , Model
                     , Model.Schema
                     , Model.URI
                     , Scrape.Quandl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , containers
                     , either
                     , http-conduit
                     , lens
                     , monad-logger
                     , mtl
                     , network-uri
                     , persistent
                     , persistent-sqlite >= 2.6.2
                     , persistent-template
                     , resourcet
                     , servant
                     , servant-server
                     , string-conversions
                     , text
                     , time
                     , wai-cors
                     , warp
                     , vector
  default-language:    Haskell2010

executable gen-client
  hs-source-dirs:      src
  main-is:             Javascript.hs
  other-modules:       Api
                     , Model
                     , Model.Schema
                     , Model.URI
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Javascript
  build-depends:       base
                     , aeson
                     , containers
                     , lens
                     , network-uri
                     , persistent
                     , persistent-template
                     , servant
                     , servant-js
                     , string-conversions
                     , text
                     , time
  default-language:    Haskell2010

executable scrape-quandl
  hs-source-dirs:      src
  main-is:             Scrape/Quandl.hs
  other-modules:       Model.Schema
                     , Model.URI
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Scrape.Quandl
  build-depends:       base
                     , aeson
                     , http-conduit
                     , network-uri
                     , persistent
                     , persistent-template
                     , string-conversions
                     , text
                     , time
                     , vector
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , spitwad
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GroupDesignPractical/spitwad
